# pdf_viewer_gtk

./: .gitignore  Makefile.am  README.md  assets_embedded.c  build.sh  configure.ac  main.c  v_common.h  v_file.c  v_file.h  v_menu.c  v_menu.h  v_pdf.c  v_pdf.h
